# Py16-web-hw13

hw-fastAPI/: .env.example  README.txt  main.py  pyproject.toml
hw-fastAPI/src/conf/: config.py
hw-fastAPI/src/repository/: contacts.py  users.py
hw-fastAPI/src/routes/: auth.py  birthday_contacts.py  contacts.py  search_contacts.py  users.py
hw-fastAPI/src/schemas/: contact.py  user.py
hw-fastAPI/src/services/: auth.py  roles.py  send_email.py
